Fix for bug in mobile safari that can generate svg div too long for parliament figure

--- a/demokratikollen/www/design/sass/_parliament.scss
+++ b/demokratikollen/www/design/sass/_parliament.scss
@@ -1,3 +1,7 @@
+svg#member_collection {
+  max-height: 100%;
+}
+
 a.member_node circle{
   stroke: black;
   stroke-width: 1px;
